# kalshi-engine

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
data/cutpoints/: README.md
data/cutpoints/v1/: cutpoints.json
data/cutpoints/v3/: cutpoints.json
scripts/: install_dca_sampler_service.ps1  install_services.ps1  start_services.ps1  uninstall_services.ps1
src/kalshi_engine/: __init__.py
src/kalshi_engine/backtest/: __init__.py  fill_simulator.py  replay.py
src/kalshi_engine/config/: __init__.py
src/kalshi_engine/core/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_5tier_v13b_10_flat.py  test_5tier_v13b_1to3_flat.py  test_5tier_v13b_1to3_ramp.py  test_5tier_v13b_7_10_10.py  test_5tier_v13b_btc_dnorm_gate.py  test_5tier_v13b_commodity_1ct_flat.py  test_5tier_v13b_h1h4.py  test_5tier_v13b_h1h4_loose.py  test_5tier_v13b_s2.py  test_align_tiered.py  test_alpaca_spot.py  test_backtest_main.py  test_bitstamp_depth.py  test_burnin_reader.py  test_calibrate_heston.py  test_capture_reader.py  test_commodity_core.py  test_commodity_window.py  test_core_smoke.py  test_cycle_duration_filter.py  test_cycle_tracker.py  test_d_norm.py  test_decicent_invariants.py  test_deep_itm_sweeper.py  test_doge_bps_floor.py  test_doge_xrp_contrarian_guard.py  test_envelope.py  test_favorite_chase_rules.py  test_favorite_chase_state.py  test_favorite_chase_strategy_integration.py  test_fees.py  test_fill_simulator.py  test_hourglass_ladder.py  test_hourglass_observer.py  test_hourglass_trader.py  test_inxu_sleep_retry.py  test_kalshi_client.py  test_kalshi_live.py  (+33 more)
(+36 files in other folders)
